--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -161,3 +161,28 @@
 	doi = {10.1093/mnras/sty3090},
 	url = {https://doi.org/10.1093/mnras/sty3090}
 }
+
+@book{jeffreys1998,
+	title = {Theory of Probability},
+	author = {Jeffreys, Harold},
+	year = {1998},
+	month = {08},
+	date = {1998-08-06},
+	publisher = {Oxford University Press},
+	doi = {10.1093/oso/9780198503682.001.0001},
+	url = {https://doi.org/10.1093/oso/9780198503682.001.0001},
+	note = {DOI: 10.1093/oso/9780198503682.001.0001}
+}
+
+@article{bürkner2017,
+	title = {{\textbf{brms}}: An {\emph{R}} Package for Bayesian Multilevel Models Using {\emph{Stan}}},
+	author = {{Bürkner}, Paul-Christian},
+	year = {2017},
+	date = {2017},
+	journal = {Journal of Statistical Software},
+	volume = {80},
+	number = {1},
+	doi = {10.18637/jss.v080.i01},
+	url = {http://dx.doi.org/10.18637/jss.v080.i01},
+	langid = {en}
+}
