--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -186,3 +186,149 @@
 	url = {http://dx.doi.org/10.18637/jss.v080.i01},
 	langid = {en}
 }
+
+@article{gronau,
+	title = {A Tutorial on Bridge Sampling},
+	author = {Gronau, Quentin F. and Sarafoglou, Alexandra and Matzke, Dora and Ly, Alexander and Boehm, Udo and Marsman, Maarten and Leslie, David S. and Forster, Jonathan J. and Wagenmakers, Eric-Jan and Steingroever, Helen},
+	doi = {10.48550/arXiv.1703.05984}
+}
+
+@article{metropolis1953,
+	title = {Equation of State Calculations by Fast Computing Machines},
+	author = {Metropolis, Nicholas and Rosenbluth, Arianna W. and Rosenbluth, Marshall N. and Teller, Augusta H. and Teller, Edward},
+	year = {1953},
+	month = {06},
+	date = {1953-06-01},
+	journal = {The Journal of Chemical Physics},
+	pages = {1087--1092},
+	volume = {21},
+	number = {6},
+	doi = {10.1063/1.1699114},
+	url = {https://doi.org/10.1063/1.1699114}
+}
+
+@article{brms,
+	title = {{\textbraceleft}brms{\textbraceright}: An {\textbraceleft}R{\textbraceright} Package for {\textbraceleft}Bayesian{\textbraceright} Multilevel Models Using {\textbraceleft}Stan{\textbraceright}},
+	author = {{Bürkner}, Paul-Christian},
+	year = {2017},
+	date = {2017},
+	volume = {80},
+	doi = {10.18637/jss.v080.i01}
+}
+
+@article{gelman1998,
+	title = {Simulating normalizing constants: from importance sampling to bridge sampling to path sampling},
+	author = {Gelman, Andrew and Meng, Xiao-Li},
+	year = {1998},
+	month = {05},
+	date = {1998-05},
+	journal = {Statistical Science},
+	pages = {163--185},
+	volume = {13},
+	number = {2},
+	doi = {10.1214/ss/1028905934},
+	url = {https://projecteuclid.org/journals/statistical-science/volume-13/issue-2/Simulating-normalizing-constants--from-importance-sampling-to-bridge-sampling/10.1214/ss/1028905934.full},
+	note = {Publisher: Institute of Mathematical Statistics}
+}
+
+@inbook{skilling2007,
+	title = {Nested Sampling for Bayesian Computations},
+	author = {Skilling, John},
+	editor = {Bernardo, J M and Bayarri, M J and Berger, J O and Dawid, A P and Heckerman, D and Smith, A F M and West, M},
+	year = {2007},
+	month = {07},
+	date = {2007-07-19},
+	publisher = {Oxford University Press},
+	pages = {0},
+	doi = {10.1093/oso/9780199214655.003.0019},
+	url = {https://doi.org/10.1093/oso/9780199214655.003.0019},
+	note = {DOI: 10.1093/oso/9780199214655.003.0019}
+}
+
+@article{freeman2013,
+	title = {Assessing Bimodality to Detect the Presence of a Dual Cognitive Process},
+	author = {Freeman, Jonathan B. and Dale, Rick},
+	year = {2013},
+	month = {03},
+	date = {2013-03-01},
+	journal = {Behavior Research Methods},
+	pages = {83--97},
+	volume = {45},
+	number = {1},
+	doi = {10.3758/s13428-012-0225-x},
+	url = {https://doi.org/10.3758/s13428-012-0225-x},
+	langid = {en}
+}
+
+@article{skilling2009,
+	title = {Nested Sampling{\textquoteright}s Convergence},
+	author = {Skilling, John},
+	year = {2009},
+	month = {12},
+	date = {2009-12-08},
+	journal = {AIP Conference Proceedings},
+	pages = {277--291},
+	volume = {1193},
+	number = {1},
+	doi = {10.1063/1.3275625},
+	url = {https://doi.org/10.1063/1.3275625}
+}
+
+@article{allison2014,
+	title = {Comparison of Sampling Techniques for Bayesian Parameter Estimation},
+	author = {Allison, Rupert and Dunkley, Joanna},
+	year = {2014},
+	month = {02},
+	date = {2014-02-01},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	pages = {3918--3928},
+	volume = {437},
+	number = {4},
+	doi = {10.1093/mnras/stt2190},
+	url = {https://doi.org/10.1093/mnras/stt2190}
+}
+
+@article{higson2018,
+	title = {Sampling Errors in Nested Sampling Parameter Estimation},
+	author = {Higson, Edward and Handley, Will and Hobson, Mike and Lasenby, Anthony},
+	year = {2018},
+	month = {09},
+	date = {2018-09},
+	journal = {Bayesian Analysis},
+	pages = {873--896},
+	volume = {13},
+	number = {3},
+	doi = {10.1214/17-BA1075},
+	url = {https://projecteuclid.org/journals/bayesian-analysis/volume-13/issue-3/Sampling-Errors-in-Nested-Sampling-Parameter-Estimation/10.1214/17-BA1075.full},
+	note = {Publisher: International Society for Bayesian Analysis}
+}
+
+@article{enrichwith,
+	title = {{\textbraceleft}enrichwith{\textbraceright}: Methods to enrich list-like R objects with extra components},
+	author = {Kosmidis, Ioannis},
+	year = {2020},
+	date = {2020},
+	url = {https://github.com/ikosmidis/enrichwith}
+}
+
+@article{tfprobability,
+	title = {tfprobability: Interface to 'TensorFlow Probability'},
+	author = {Keydana, Sigrid},
+	year = {2022},
+	date = {2022},
+	url = {https://github.com/rstudio/tfprobability}
+}
+
+@article{thall1990,
+	title = {Some Covariance Models for Longitudinal Count Data with Overdispersion},
+	author = {Thall, P. F. and Vail, S. C.},
+	year = {1990},
+	month = {09},
+	date = {1990-09},
+	journal = {Biometrics},
+	pages = {657--671},
+	volume = {46},
+	number = {3},
+	note = {PMID: 2242408},
+	langid = {eng}
+}
